--- a/app/assets/stylesheets/papers.css.scss
+++ b/app/assets/stylesheets/papers.css.scss
@@ -1,6 +1,7 @@
 // Place all the styles related to the Papers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
 body{
 	background-color: black;
 }
@@ -9,7 +10,7 @@ h1{
 	margin:0;
 	padding:80px;
 	text-align:center;
-	font-size:50px;
+	font-size:60px;
 	letter-spacing:2px;
 }
 
@@ -18,10 +19,26 @@ h3{
 	letter-spacing:2px;
 }
 
+canvas{
+	outline:none;
+}
+
 #backbutton{
+	margin:0;
+	padding:0;
 	text-align:center;	
 	position:relative;
 	top:-50px;
+}
+
+#typing{
+	margin:0;
+	padding:0;
+	color:#00ff00;
+	text-align:center;	
+	font-size: 20px;
+	position:relative;
+	top:-20px;
 }
 
 #headline {
