--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,10 @@
 <html>
 <head>
   <title>Kai writes papers</title>
+
+  <!-- FONT -->
+  <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jura:500'>
+  
   <%= stylesheet_link_tag    "application", media: "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
