Refactor sketches, add initialize, remove duplicate code

--- a/app/assets/stylesheets/papers.css.scss
+++ b/app/assets/stylesheets/papers.css.scss
@@ -48,6 +48,13 @@ canvas{
 	font-size:60px;
 }
 
+#subline {
+	font-size:20px;
+	text-align:center;	
+	position:relative;
+	top: -80px;
+}
+
 $padding: 50px;
 $margin: 0;
 $fontsize: 40px;
