--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -10,7 +10,7 @@
 		<div class="row">
 			<div class="span4 text-center">
 				<h3>Total words</h3>
-				<canvas id="words" data-processing-sources=<%=asset_path 'words.pde'%> ></canvas>
+				<canvas id="words" data-processing-sources=<%=asset_path 'level-module.pde'%> ></canvas>
 			</div>
 			<div class="span4 text-center">
 				<h3>Average word length</h3>
@@ -18,7 +18,7 @@
 			</div>
 			<div class="span4 text-center">
 				<h3>Different words</h3>
-				<canvas id="distinct" data-processing-sources=<%=asset_path 'distinct.pde'%>></canvas>
+				<canvas id="distinct" data-processing-sources=<%=asset_path 'level-module.pde'%>></canvas>
 			</div>
 		</div>
 		<div class="row">
