--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -1,4 +1,5 @@
-<h1 id="headline">See my progress on those papers</h1>
+<h1 id="headline">Watch me writing papers</h1>
+<h2 id="subline">As soon as I hit save, statistics get uploaded. Your browswer refreshes every 5 seconds.</h2>
 
 <div class="container">
   <div class="row">
