Add support for border cases (max level)

--- a/app/views/papers/index.html.erb
+++ b/app/views/papers/index.html.erb
@@ -1,5 +1,5 @@
 <h1 id="headline">Watch me writing papers</h1>
-<h2 id="subline">As soon as I hit save, statistics get uploaded. Your browswer refreshes every 5 seconds.</h2>
+<h2 id="subline">As soon as I hit save, statistics get uploaded. Your browser refreshes every 5 seconds.</h2>
 
 <div class="container">
   <div class="row">
