Add word cloud rendering

--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -40,6 +40,11 @@
 				<canvas id="awl-details" data-processing-sources=<%=asset_path 'awl-details.pde'%>></canvas>
 			</div>
 		</div>
+		<div class="row">
+			<div class="span12 text-center">
+				<canvas id="word-cloud" data-processing-sources=<%=asset_path 'word-cloud.pde'%>></canvas>
+			</div>
+		</div>
 	</div>
 </div>
 
