Add a sketch for paragraph sizes

--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -22,6 +22,12 @@
 			</div>
 		</div>
 		<div class="row">
+			<div class="span12 text-center">
+				<h3>Paragraphs</h3>
+				<canvas id="paragraphs" data-processing-sources=<%=asset_path 'paragraphs.pde'%> ></canvas>
+			</div>
+		</div>
+		<div class="row">
 			<div class="span4 text-center">
 				<h3>Oxford 3000+ coverage</h3>
 				<canvas id="oxford" data-processing-sources=<%=asset_path 'oxford.pde'%>></canvas>
