--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Kai writes papers</title>
+  <title>Sebastian writes papers</title>
 
   <!-- FONT -->
   <link rel='stylesheet' type='text/css' href='http://fonts.googleapis.com/css?family=Jura:500'>
