--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -38,7 +38,9 @@ div {
 #notice {
   color: green;
 }
-
+#error {
+  color: red;
+}
 .field_with_errors {
   padding: 2px;
   background-color: red;
