Fix error in template with ending if statement

--- a/app/views/applause_mailer/applause_mail.html.erb
+++ b/app/views/applause_mailer/applause_mail.html.erb
@@ -9,7 +9,7 @@
 	<small><%= @applause.user_agent %></small>!
 	<% if @applause.paper.applause.size > 1 %>
 	And not only this user! <%= @applause.paper.applause.size %> other users like as well that you are an damn active writer!
-	<% end if %>
+	<% end %>
 	<br/><br/>
 	Go on, dude!
   </body>
