--- a/app/views/papers/_applause.html.erb
+++ b/app/views/papers/_applause.html.erb
@@ -8,6 +8,6 @@
 		The author has been cheered up once!
 	<% elsif applause_count > 1%> 
 		The author has been cheered up <%=  applause_count %> times! <br/>Be the next!
-	<% end if %> 
+	<% end %> 
 	</small>
 </div>		
