Slightly adjust cheering up feature

--- a/app/views/applause_mailer/applause_mail.html.erb
+++ b/app/views/applause_mailer/applause_mail.html.erb
@@ -4,7 +4,7 @@
     <meta content='text/html; charset=UTF-8' http-equiv='Content-Type' />
   </head>
   <body>
-	<h1>Cooler Typ!</h1>
+	<h1>Awesome dude!</h1>
 	Says <%= @applause.source_ip %> from <%= @applause.referer %>! <br/>
 	<small><%= @applause.user_agent %></small>!
 	<% if @applause.paper.applause.size > 1 %>
