Fix word cloud word height mapping bug
Height mapping was done 1 to maxOccurrence to 10 to 70
Now it's 0 to maxOccurrence to 10 to 70.

This fixes the case that some of the interesting words
appear only once.

--- a/app/views/papers/show.html.erb
+++ b/app/views/papers/show.html.erb
@@ -5,8 +5,8 @@
 
 <%= render "applause" %>
 
-<p id="backbutton"><%= link_to 'BACK TO ALL PAPERS', papers_path %></p>
-<% if @paper.alive %>	
+<p id="backbutton"><%= link_to 'SHOW ALL PAPERS', papers_path %></p>
+<% if @paper.alive %>
 	<p id="typing">I'm currently typing ... !</p>
 <% end %>
 <div class="container">
